--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -14,6 +14,9 @@ add_compile_definitions(GTEST_BUILD)
 find_package(GTest CONFIG REQUIRED)
 include_directories(../EvilCG/inc)
 
+find_package(OpenCL CONFIG REQUIRED)
+include_directories(${OpenCL_INCLUDE_DIRS})
+
 # Source files
 set(SOURCE_FILES
 	./src/ecg_api_test.cpp
@@ -23,7 +26,20 @@ set(SOURCE_FILES
 enable_testing()
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 target_link_libraries(${PROJECT_NAME} PRIVATE EvilCG)
+target_link_libraries(${PROJECT_NAME} PRIVATE OpenCL::OpenCL)
 target_link_libraries(${PROJECT_NAME} PRIVATE GTest::gtest GTest::gtest_main GTest::gmock GTest::gmock_main)
 
-target_compile_options(${PROJECT_NAME} PRIVATE -fsycl)
-target_link_options(${PROJECT_NAME} PRIVATE -fsycl)
+# Copy EvilCG.dll or EvilCG.so after build
+if (WIN32)
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        "$<TARGET_FILE:EvilCG>"  # Source: EvilCG DLL
+        $<TARGET_FILE_DIR:${PROJECT_NAME}>  # Destination: Test executable directory
+    )
+elseif (UNIX)
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        "$<TARGET_FILE:EvilCG>"  # Source: EvilCG SO
+        $<TARGET_FILE_DIR:${PROJECT_NAME}>  # Destination: Test executable directory
+    )
+endif()
