devlog: temp save for future memory managment system

--- a/EvilCG/CMakeLists.txt
+++ b/EvilCG/CMakeLists.txt
@@ -26,7 +26,9 @@ include_directories(./inc)
 set(SOURCE_FILES
 	./src/cl/ecg_host_ctrl.cpp
 	./src/cl/ecg_program.cpp
-
+	
+	./src/help/ecg_hasher.cpp
+	./src/help/ecg_memory.cpp
 	./src/help/ecg_helper.cpp
 	./src/help/ecg_status.cpp
 	./src/help/ecg_geom.cpp
