devlog: little refactor + start implement meshes simplification

--- a/EvilCG/CMakeLists.txt
+++ b/EvilCG/CMakeLists.txt
@@ -24,8 +24,9 @@ include_directories(./inc)
 
 # Source Files
 set(SOURCE_FILES
-	./src/cl/ecg_host_ctrl.cpp
-	./src/cl/ecg_program.cpp
+	./src/core/ecg_simplification.cpp
+	./src/core/ecg_host_ctrl.cpp
+	./src/core/ecg_program.cpp
 	
 	./src/help/ecg_handler.cpp
 	./src/help/ecg_hasher.cpp
