--- a/EvilCG/CMakeLists.txt
+++ b/EvilCG/CMakeLists.txt
@@ -17,10 +17,15 @@ set(CMAKE_CXX_STANDARD 20)
 find_package(glm REQUIRED)
 find_package(OpenCL REQUIRED)
 find_package(Eigen3 REQUIRED)
+find_package(spdlog REQUIRED)
+find_package(fmt CONFIG REQUIRED)
 include_directories(${OpenCL_INCLUDE_DIRS})
 
 # Include directories
 include_directories(./inc)
+
+# Definitions
+add_compile_definitions(${PROJECT_NAME} PRIVATE ECG_USE_SPDLOG)
 
 # Source Files
 set(SOURCE_FILES
@@ -35,6 +40,7 @@ set(SOURCE_FILES
 	./src/help/ecg_memory.cpp
 	./src/help/ecg_helper.cpp
 	./src/help/ecg_status.cpp
+	./src/help/ecg_logger.cpp
 	./src/help/ecg_geom.cpp
 
 	./src/ecg_api.cpp
@@ -46,4 +52,6 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE ECG_DLL)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE glm::glm)
 target_link_libraries(${PROJECT_NAME} PRIVATE Eigen3::Eigen)
-target_link_libraries(${PROJECT_NAME} PRIVATE OpenCL::OpenCL)
+target_link_libraries(${PROJECT_NAME} PRIVATE OpenCL::OpenCL)    
+target_link_libraries(${PROJECT_NAME} PRIVATE fmt::fmt-header-only)
+target_link_libraries(${PROJECT_NAME} PRIVATE spdlog::spdlog_header_only)
